Fixed spacing around page title/subtitle

--- a/src/app/page-components/header/header.component.css
+++ b/src/app/page-components/header/header.component.css
@@ -1,3 +1,3 @@
 .buffer {
-    margin-top: 100px;
+    margin-top: 6.5rem;
 }
